<resources>
    <string name="app_name">ChatApp</string>
    <string name="register">Register</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="status">Hi There! i am on this Cool chatapp</string>
</resources>
