<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SettingsActivity">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/setting_appBar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="132dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:src="@drawable/default_pic" />


    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="Display Name"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/setting_status"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="236dp"
        android:text="@string/status"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/change_image"

        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:text="@string/change_status"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>